# swig_example

./: README.md
array_example/: README.md  example.c  example.h  example.i  run_python.py
cmake_example/: README.md  example.c  example.h  example.i
simple_example/: .gitignore  Makefile  README.md  run_python.py
struct_ptr_example/: CMakeLists.txt  README.md  example.c  example.h  example.i  run_python.py
